# product-ingestion-demo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  ingestion.py  main.py  openapi.json  pyproject.toml
app/: db.py  ingest.py  logging.py  main.py  test_main.py
db/: schema.py
scripts/: init_db.py  openapi.py  upload.sh
test_files/: correct.json  malformed.json
