[project]
name = "veryfi-takehome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "aiosqlite>=0.21.0",
    "cryptography>=44.0.2",
    "fastapi[standard]>=0.115.11",
    "ijson>=3.3.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
]
